--- a/integration-tests/salesforce/pom.xml
+++ b/integration-tests/salesforce/pom.xml
@@ -37,6 +37,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-direct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-seda</artifactId>
         </dependency>
         <dependency>
@@ -73,6 +77,53 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.quarkus</groupId>
+                        <artifactId>quarkus-enforcer-rules</artifactId>
+                        <version>${quarkus.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.l2x6.cq</groupId>
+                        <artifactId>cq-filtered-external-enforcer-rules</artifactId>
+                        <version>${cq-plugin.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>camel-quarkus-enforcer-rules</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <dependencyConvergence />
+                                <filteredExternalRules>
+                                    <location>classpath:enforcer-rules/quarkus-require-maven-version.xml</location>
+                                </filteredExternalRules>
+                                <filteredExternalRules>
+                                    <location>classpath:enforcer-rules/quarkus-banned-dependencies.xml</location>
+                                    <xsltLocation>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/quarkus-banned-dependencies.xsl</xsltLocation>
+                                </filteredExternalRules>
+                                <filteredExternalRules>
+                                    <location>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/camel-quarkus-banned-dependencies.xml</location>
+                                    <xsltLocation>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/allow-findbugs.xsl</xsltLocation>
+                                </filteredExternalRules>
+                                <filteredExternalRules>
+                                    <location>${maven.multiModuleProjectDirectory}/tooling/enforcer-rules/camel-quarkus-banned-dependencies-spring.xml</location>
+                                </filteredExternalRules>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <profiles>
         <profile>
@@ -109,22 +160,35 @@
                     <plugin>
                         <groupId>org.apache.camel.maven</groupId>
                         <artifactId>camel-salesforce-maven-plugin</artifactId>
+                        <configuration>
+                            <clientId>${env.SALESFORCE_CLIENTID}</clientId>
+                            <clientSecret>${env.SALESFORCE_CLIENTSECRET}</clientSecret>
+                            <userName>${env.SALESFORCE_USERNAME}</userName>
+                            <password>${env.SALESFORCE_PASSWORD}</password>
+                            <loginUrl>https://login.salesforce.com</loginUrl>
+                        </configuration>
                         <executions>
                             <execution>
+                                <id>generate-dto-classes</id>
                                 <goals>
                                     <goal>generate</goal>
                                 </goals>
                                 <configuration>
-                                    <clientId>${env.SALESFORCE_CLIENTID}</clientId>
-                                    <clientSecret>${env.SALESFORCE_CLIENTSECRET}</clientSecret>
-                                    <userName>${env.SALESFORCE_USERNAME}</userName>
-                                    <password>${env.SALESFORCE_PASSWORD}</password>
-                                    <loginUrl>https://login.salesforce.com</loginUrl>
                                     <packageName>org.apache.camel.quarkus.component.salesforce.generated</packageName>
                                     <outputDirectory>src/main/java</outputDirectory>
                                     <includes>
                                         <include>Account</include>
                                     </includes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>generate-event-bus-classes</id>
+                                <goals>
+                                    <goal>generatePubSub</goal>
+                                </goals>
+                                <configuration>
+                                    <topics>/event/TestEvent__e</topics>
+                                    <outputDirectory>src/main/java</outputDirectory>
                                 </configuration>
                             </execution>
                         </executions>
@@ -141,7 +205,19 @@
             </activation>
             <dependencies>
                 <!-- The following dependencies guarantee that this module is built after them. You can update them by running `mvn process-resources -Pformat -N` from the source tree root directory -->
-
+                <dependency>
+                    <groupId>org.apache.camel.quarkus</groupId>
+                    <artifactId>camel-quarkus-direct-deployment</artifactId>
+                    <version>${project.version}</version>
+                    <type>pom</type>
+                    <scope>test</scope>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>*</groupId>
+                            <artifactId>*</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
                 <dependency>
                     <groupId>org.apache.camel.quarkus</groupId>
                     <artifactId>camel-quarkus-salesforce-deployment</artifactId>
@@ -155,7 +231,6 @@
                         </exclusion>
                     </exclusions>
                 </dependency>
-
                 <dependency>
                     <groupId>org.apache.camel.quarkus</groupId>
                     <artifactId>camel-quarkus-seda-deployment</artifactId>
