--- a/integration-tests/salesforce/src/main/resources/application.properties
+++ b/integration-tests/salesforce/src/main/resources/application.properties
@@ -19,3 +19,7 @@
 # Camel :: Salesforce
 #
 camel.component.salesforce.loginUrl = https://login.salesforce.com
+
+# TODO: Remove this. Currently required for pub/sub POJO class loading
+# https://github.com/apache/camel-quarkus/issues/5502
+quarkus.test.flat-class-path = true
