Improve container setup for kafka-oauth test

--- a/integration-tests/kafka-oauth/src/main/resources/application.properties
+++ b/integration-tests/kafka-oauth/src/main/resources/application.properties
@@ -23,26 +23,17 @@ kafka.topic.name=test
 timer.period = 100
 timer.delay = 100
 
-camel.component.kafka.security-protocol = SASL_PLAINTEXT
-camel.component.kafka.sasl-mechanism = OAUTHBEARER
-camel.component.kafka.sasl-jaas-config = org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required \
-  oauth.client.id="kafka-client" \
-  oauth.client.secret="kafka-client-secret" \
-  oauth.token.endpoint.uri="http://keycloak:8080/auth/realms/kafka-authz/protocol/openid-connect/token" ;
-camel.component.kafka.additional-properties[sasl.login.callback.handler.class] = io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
-
 # enable health check
 quarkus.kafka.health.enabled=true
 
 # using QuarkusTestResourceLifecycleManager in this test: Kafka configuration needs to be tuned to work with Keycloak
 quarkus.kafka.devservices.enabled=false
 
-
 #
 # Quarkus - Log
 #
 quarkus.log.category."org.apache.camel.quarkus.core.deployment".level = INFO
-quarkus.log.category."org.apache.camel.quarkus.component.kafka".level = DEBUG
+quarkus.log.category."org.apache.camel.quarkus.component.kafka".level = INFO
 quarkus.log.category."org.apache.zookeeper".level = WARNING
 quarkus.log.category."org.apache.kafka".level = WARNING
 
