--- a/integration-tests/kafka-oauth/pom.xml
+++ b/integration-tests/kafka-oauth/pom.xml
@@ -89,6 +89,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-test-keycloak-server</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <scope>test</scope>
@@ -126,8 +131,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <systemPropertyVariables>
-                                <!-- Configure the app to test to resolve "keycloak" hostname to the Docker hostname -->
-                                <jdk.net.hosts.file>target/hosts</jdk.net.hosts.file>
+                                <keycloak.docker.image>${keycloak.container.image}</keycloak.docker.image>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
@@ -156,9 +160,8 @@
                                     <goal>verify</goal>
                                 </goals>
                                 <configuration>
-                                    <rerunFailingTestsCount>${rerun.failing.test.count}</rerunFailingTestsCount>
                                     <systemPropertyVariables>
-                                        <quarkus.test.arg-line>-Djdk.net.hosts.file=target/hosts</quarkus.test.arg-line>
+                                        <keycloak.docker.image>${keycloak.container.image}</keycloak.docker.image>
                                     </systemPropertyVariables>
                                 </configuration>
                             </execution>
