Upgrade quarkus-amazon-services to 2.5.3
Fixes #5510

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -6923,6 +6923,16 @@
                 <version>${awscrt.version}</version>
             </dependency>
             <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>sdk-core</artifactId>
+                <version>${awssdk.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>http-auth-aws</artifactId>
+                <version>${awssdk.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>xalan</groupId>
                 <artifactId>xalan</artifactId>
                 <version>${xalan.version}</version>
