Add release scripts in Camel Quarkus for uploading and promoting source in Apache Dist
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -589,6 +589,7 @@
                             <exclude>**/src/test/resources/__files/*.xml</exclude>
                             <exclude>.github/actions/**</exclude>
                             <exclude>**/my-property</exclude>
+                            <exclude>release-utils/*.sh</exclude>
                         </excludes>
                         <mapping>
                             <cli>CAMEL_PROPERTIES_STYLE</cli>
