--- a/.github/workflows/camel-master-cron.yaml
+++ b/.github/workflows/camel-master-cron.yaml
@@ -200,6 +200,7 @@ jobs:
           if [[ ${NATIVE_MODULES[@]} ]]; then
             eval ./mvnw ${CQ_MAVEN_ARGS} clean verify \
               -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
+              -Dquarkus.native.builder-image.pull=missing \
               -Pnative,docker,ci \
               --fail-at-end \
               -pl "${NATIVE_MODULES[*]}"
@@ -452,6 +453,7 @@ jobs:
 
             ../mvnw ${MAVEN_ARGS} clean verify \
               -Dformatter.skip -Dimpsort.skip \
+              -Dquarkus.native.builder-image.pull=missing \
               -Pnative,docker,ci
 
             if [[ $? -ne 0 ]]; then
