--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -280,6 +280,7 @@ jobs:
           if [[ ${NATIVE_MODULES[@]} ]]; then
             eval ./mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} clean verify \
               -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
+              -Dquarkus.native.builder-image.pull=missing \
               -Pnative,docker,ci \
               --fail-at-end \
               -pl "${NATIVE_MODULES[*]}"
@@ -508,6 +509,7 @@ jobs:
 
             ../mvnw ${MAVEN_ARGS} clean verify \
               -Dformatter.skip -Dimpsort.skip \
+              -Dquarkus.native.builder-image.pull=missing \
               -Pnative,docker,ci
 
             if [[ $? -ne 0 ]]; then
