--- a/.github/workflows/camel-master-cron.yaml
+++ b/.github/workflows/camel-master-cron.yaml
@@ -292,7 +292,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ '17' ]
+        java: [ '17', '21' ]
     env:
       MAVEN_OPTS: -Xmx3000m
     steps:
@@ -307,13 +307,6 @@ jobs:
           df -h /
           tar -xzf ../maven-repo.tgz -C ~
           df -h /
-          hostname
-          hostname -f
-          hostname -A
-          HOSTS_LINE="127.0.0.1 $(hostname -f) $(hostname -A)"
-          echo "HOSTS_LINE=$HOSTS_LINE"
-          echo "${HOSTS_LINE}" | sudo tee -a /etc/hosts
-          cat /etc/hosts
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -341,6 +334,54 @@ jobs:
         if: failure() || cancelled()
         run: |
           ./mvnw ${CQ_MAVEN_ARGS} verify -N -Pbuild-notification -Dstatus=${{ job.status }} -DissueId=${{ env.ISSUE_ID }} -Dtoken=${{ secrets.GITHUB_TOKEN }} -DbuildId=$(cat ~/build-data/build-id.txt) -Drepo=${GITHUB_REPOSITORY} -Dbranch=camel-main -Dbranch-commit=$(cat ~/build-data/main-sha.txt)
+
+  integration-tests-alternative-jdk:
+    runs-on: ubuntu-latest
+    needs: initial-mvn-install
+    env:
+      MAVEN_OPTS: -Xmx3000m
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: camel-main
+          fetch-depth: 0
+      - name: Reclaim Disk Space
+        run: |
+          df -h /
+          echo "Reclaiming disk space..."
+          sudo rm -rf /opt/ghc \
+               rm -rf /opt/pipx \
+               rm -rf /usr/local/go \
+               rm -rf /usr/local/lib/android \
+               rm -rf /usr/local/share/boost \
+               rm -rf /usr/share/dotnet \
+               rm -rf /usr/share/rust \
+               rm -rf /usr/share/swift
+          df -h /
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      - name: Download Maven Repo
+        uses: actions/download-artifact@v3
+        with:
+          name: maven-repo
+          path: ..
+      - name: Extract Maven Repo
+        shell: bash
+        run: |
+          df -h /
+          tar -xzf ../maven-repo.tgz -C ~
+          df -h /
+      - name: cd integration-tests && mvn clean verify
+        run: |
+          cd integration-tests
+          ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
+            -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
+            --fail-at-end \
+            clean verify
 
   integration-tests-alternative-platform:
     runs-on: ${{ matrix.os }}
