--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -363,7 +363,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ '17' ]
+        java: [ '17', '21' ]
     env:
       MAVEN_OPTS: -Xmx3000m
     steps:
@@ -392,13 +392,6 @@ jobs:
           df -h /
           tar -xzf ../maven-repo.tgz -C ~
           df -h /
-          hostname
-          hostname -f
-          hostname -A
-          HOSTS_LINE="127.0.0.1 $(hostname -f) $(hostname -A)"
-          echo "HOSTS_LINE=$HOSTS_LINE"
-          echo "${HOSTS_LINE}" | sudo tee -a /etc/hosts
-          cat /etc/hosts
       - name: cd integration-tests-jvm && mvn clean test
         run: |
           cd integration-tests-jvm
@@ -406,6 +399,59 @@ jobs:
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean test
+
+  integration-tests-alternative-jdk:
+    runs-on: ubuntu-latest
+    needs: initial-mvn-install
+    if: github.event_name != 'pull_request' || !contains(github.event.pull_request.labels.*.name, 'JVM')
+    env:
+      MAVEN_OPTS: -Xmx3000m
+    steps:
+      - name: Setup oss-snapshots profile
+        if: github.ref == 'refs/heads/quarkus-main' || github.base_ref == 'quarkus-main'
+        run: |
+          echo "BRANCH_OPTIONS=-Poss-snapshots -Dquarkus.version=999-SNAPSHOT" >> $GITHUB_ENV
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ env.CHECKOUT_REF }}
+          fetch-depth: 0
+      - name: Reclaim Disk Space
+        run: |
+          df -h /
+          echo "Reclaiming disk space..."
+          sudo rm -rf /opt/ghc \
+               rm -rf /opt/pipx \
+               rm -rf /usr/local/go \
+               rm -rf /usr/local/lib/android \
+               rm -rf /usr/local/share/boost \
+               rm -rf /usr/share/dotnet \
+               rm -rf /usr/share/rust \
+               rm -rf /usr/share/swift
+          df -h /
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      - name: Download Maven Repo
+        uses: actions/download-artifact@v3
+        with:
+          name: maven-repo
+          path: ..
+      - name: Extract Maven Repo
+        shell: bash
+        run: |
+          df -h /
+          tar -xzf ../maven-repo.tgz -C ~
+          df -h /
+      - name: cd integration-tests && mvn clean verify
+        run: |
+          cd integration-tests
+          ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
+            -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
+            --fail-at-end \
+            clean verify
 
   integration-tests-alternative-platform:
     runs-on: ${{ matrix.os }}
