--- a/integration-tests-support/wiremock/pom.xml
+++ b/integration-tests-support/wiremock/pom.xml
@@ -39,8 +39,8 @@
             <artifactId>camel-quarkus-integration-test-support-mock-backend</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock-standalone</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
