--- a/poms/bom-test/pom.xml
+++ b/poms/bom-test/pom.xml
@@ -342,8 +342,8 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>com.github.tomakehurst</groupId>
-                <artifactId>wiremock</artifactId>
+                <groupId>org.wiremock</groupId>
+                <artifactId>wiremock-standalone</artifactId>
                 <version>${wiremock.version}</version>
                 <exclusions>
                     <exclusion>
