--- a/.github/workflows/quarkus-master-cron.yaml
+++ b/.github/workflows/quarkus-master-cron.yaml
@@ -129,19 +129,6 @@ jobs:
       fail-fast: false
       matrix: ${{ fromJson(needs.initial-mvn-install.outputs.matrix) }}
     steps:
-      - name: Reclaim Disk Space
-        run: |
-          df -h /
-          echo "Reclaiming disk space..."
-          sudo rm -rf /opt/ghc \
-               rm -rf /opt/pipx \
-               rm -rf /usr/local/go \
-               rm -rf /usr/local/lib/android \
-               rm -rf /usr/local/share/boost \
-               rm -rf /usr/share/dotnet \
-               rm -rf /usr/share/rust \
-               rm -rf /usr/share/swift
-          df -h /
       - name: Download Maven Repo
         uses: actions/download-artifact@v3
         with:
@@ -158,6 +145,8 @@ jobs:
         with:
           ref: quarkus-main
           fetch-depth: 0
+      - name: Reclaim Disk Space
+        run: .github/reclaim-disk-space.sh
       - name: Rebase branch main onto quarkus-main
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -348,18 +337,7 @@ jobs:
           ref: quarkus-main
           fetch-depth: 0
       - name: Reclaim Disk Space
-        run: |
-          df -h /
-          echo "Reclaiming disk space..."
-          sudo rm -rf /opt/ghc \
-               rm -rf /opt/pipx \
-               rm -rf /usr/local/go \
-               rm -rf /usr/local/lib/android \
-               rm -rf /usr/local/share/boost \
-               rm -rf /usr/share/dotnet \
-               rm -rf /usr/share/rust \
-               rm -rf /usr/share/swift
-          df -h /
+        run: .github/reclaim-disk-space.sh
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
