Switch to enabling JFR support with quarkus.native.monitoring config property

--- a/integration-tests/jfr/src/main/resources/application.properties
+++ b/integration-tests/jfr/src/main/resources/application.properties
@@ -16,4 +16,4 @@
 ## ---------------------------------------------------------------------------
 
 # Must enable VM inspection for JFR in native mode
-quarkus.native.enable-vm-inspection=true
+quarkus.native.monitoring=jfr
