--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -29,7 +29,7 @@ asciidoc:
 
     # Project versions
     camel-version: 4.3.0 # replace ${camel.version}
-    camel-docs-version: 4.0.x
+    camel-docs-version: ""
     camel-quarkus-version: 3.7.0 # replace ${camel-quarkus.version}
     quarkus-version: 3.6.4 # replace ${quarkus.version}
     graalvm-version: 23.0.1 # replace ${graalvm.version}
