--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -28,7 +28,7 @@ asciidoc:
     requires: "'util=camel-website-util,quarkus=xref:js/quarkus.js'"
 
     # Project versions
-    camel-version: 4.3.0 # replace ${camel.version}
+    camel-version: 4.4.0-SNAPSHOT # replace ${camel.version}
     camel-docs-version: next
     camel-quarkus-version: 3.7.0 # replace ${camel-quarkus.version}
     quarkus-version: 3.7.0.CR1 # replace ${quarkus.version}
