--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -29,7 +29,7 @@ asciidoc:
 
     # Project versions
     camel-version: 4.3.0 # replace ${camel.version}
-    camel-docs-version: ""
+    camel-docs-version: next
     camel-quarkus-version: 3.7.0 # replace ${camel-quarkus.version}
     quarkus-version: 3.6.4 # replace ${quarkus.version}
     graalvm-version: 23.0.1 # replace ${graalvm.version}
@@ -39,7 +39,7 @@ asciidoc:
     target-maven-version: 3.9.6 # replace ${target-maven-version}
 
     # Attributes used in xrefs to other Antora components
-    cq-camel-components: components
+    cq-camel-components: next@components
     doc-link-icon-lock: "icon:lock"
     quarkus-examples-version: latest
 
