--- a/integration-tests-support/kafka/pom.xml
+++ b/integration-tests-support/kafka/pom.xml
@@ -39,8 +39,8 @@
             <artifactId>camel-quarkus-integration-test-support</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>kafka</artifactId>
+            <groupId>io.strimzi</groupId>
+            <artifactId>strimzi-test-container</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>junit</groupId>
